--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,13 @@
+buildscript {
+    repositories {
+        jcenter()
+    }
+    dependencies {
+        classpath 'com.netflix.nebula:nebula-kotlin-plugin:1.0.3'
+        classpath 'com.netflix.nebula:nebula-project-plugin:3.3.0'
+    }
+}
+
 allprojects {
     group 'com.example'
 
